--- a/css/sub_2.css
+++ b/css/sub_2.css
@@ -163,8 +163,7 @@ body {
     line-height: 26px;
     color: #020721;
     background-color: #fff;
-    overflow-x: hidden;
-
+    min-width: 1450px;
 }
 
 
