--- a/css/index.css
+++ b/css/index.css
@@ -1401,7 +1401,7 @@ transform: rotate(-25deg);
 
 .banner div h2 {
   position: relative;
-  padding-bottom: 13%;
+  padding-bottom: 80px;
   z-index: 1;
 }
 
